# adventofcode

./: .gitignore  README.md  flake.nix
Python/2019/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py
Python/2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  lib.py  shell.nix
Python/lib/: lib.py
Rust/: Cargo.toml
Rust/2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs  template.rs
Rust/lib/: lib.rs
