[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "2025"
path = "2025/main.rs"

[[bin]]
name = "day01"
path = "2025/day01.rs"

[[bin]]
name = "day02"
path = "2025/day02.rs"

[[bin]]
name = "day03"
path = "2025/day03.rs"

[[bin]]
name = "day04"
path = "2025/day04.rs"

[[bin]]
name = "day05"
path = "2025/day05.rs"

[[bin]]
name = "day06"
path = "2025/day06.rs"

[lib]
name = "aoc"
path = "lib/lib.rs"
